syntax = "proto3";

option csharp_namespace = "Server.Protos.WeatherForecast";

import "google/protobuf/timestamp.proto";

service WeatherForecast {
  rpc GetTemperatureStream(Request) returns (stream Response);
}

message Request {
  google.protobuf.Timestamp startDate = 1;
}

message Response {
  google.protobuf.Timestamp date = 1;
  double temperature = 2;
}